--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./main-dist/index.js",
   "scripts": {
     "start:main": "tsc -w --p tsconfig.main.json",
-    "start:react": "vite",
+    "start:react": "bash start.sh && vite --config vite.config.ts",
     "build:react": "tsc && vite build",
     "build:main": "tsc --p tsconfig.main.json",
     "start:electron": "electron ./main-dist/index",
@@ -41,16 +41,17 @@
   "author": "xiaoming",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^17.0.80",
-    "@types/react-dom": "^17.0.25",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.3.0",
-    "electron": "^15.1.2",
+    "electron": "32.1.2",
     "electron-builder": "^24.13.3",
     "electron-reloader": "^1.2.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "less": "^4.2.0",
     "less-loader": "^10.0.1",
     "prettier": "^3.2.5",
     "style-loader": "^3.3.0",
@@ -60,15 +61,10 @@
     "vite": "^5.2.11"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fontsource/roboto": "^5.0.13",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
     "electron-is-dev": "^2.0.0",
     "esbuild": "^0.21.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1"
   }
 }
